packages/mgt-components/src/components/mgt-login/mgt-login.scss
/**
 * -------------------------------------------------------------------------------------------
 * Copyright (c) Microsoft Corporation.  All Rights Reserved.  Licensed under the MIT License.
 * See License in the project root for license information.
 * -------------------------------------------------------------------------------------------
 */

@import '../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
@import '../../styles/shared-styles.scss';
@import './mgt-login.theme.scss';

:host,
mgt-login {
  --font-size: #{$ms-font-size-m};
  --font-weight: #{$ms-font-weight-semibold};
  --width: '100%';
  --height: '100%';
  --margin: 0;
  --padding: 12px 20px;
  --popup-command-font-size: #{$ms-font-size-s};
  --popup-command-margin: 16px 0 0;
  --popup-padding: 10px 10px 16px 15px;
}

:host .root,
mgt-login .root {
  position: relative;
  display: inline-block;
}

:host .login-button,
mgt-login .login-button {
  display: flex;
  align-items: center;
  font-family: $font-family;
  font-size: var(--font-size);
  font-weight: var(--font-weight);
  width: var(--width);
  height: var(--height);
  margin: var(--margin);
  padding: var(--padding);
  color: set-var(button__color, $theme-default, $login);
  background-color: var(--button-background-color, transparent);
  border: none;
  cursor: pointer;
  transition: color 0.3s, background-color 0.3s;

  mgt-person {
    --color-sub1: set-var(button__color, $theme-default, $login);
  }

  &:hover {
    color: $button__color--hover;
    --color: #{$button__color--hover};
    background-color: $button__background-color--hover;
    --color-sub1: #{$button__color--hover};
  }

  &:focus {
    outline: 0;
  }

  &:disabled {
    opacity: 0.4;
    pointer-events: none;
  }

  &.no-click {
    pointer-events: none;
  }
}

:host .login-icon,
mgt-login .login-icon {
  & + span {
    margin-left: 6px;
  }
}

:host .popup,
mgt-login .popup {
  font-family: $font-family;
  background-color: $popup__background-color;
  min-width: 240px;
  max-width: 300px;
  z-index: 1;
  color: set-var(popup__color, $theme-default, $login);

  mgt-person {
    --color-sub1: set-var(popup__color, $theme-default, $login);
  }
}

:host .popup-content,
mgt-login .popup-content {
  display: flex;
  flex-direction: column;
  padding: var(--popup-padding);
  background-color: $popup__background-color;

  .inside-content {
    overflow-y: auto;
    overflow-x: clip;
    max-height: 400px;
    padding-right: 10px;
    .list-box {
      background-color: $popup__background-color;
      --accent-fill-hover: $popup__background-color;
      --accent-fill-active: $popup__background-color;
      --accent-foreground-cut-rest: black;
      color: black !important;
      .list-box-option {
        margin-bottom: 10px;
        mgt-person {
          --details-spacing: 9px;
          --avatar-size: 40px;
          position: relative;
          &:after {
            content: '';
            position: absolute;
            z-index: 1;
            top: 0;
            right: 0;
            bottom: 5px;
            pointer-events: none;
            background-image: linear-gradient(to right, rgba(255, 255, 255, 0), $popup__background-color 85%);
            width: 40%;
          }
        }
        &:hover {
          background-color: #e5e5e5;
        }
      }
      &:focus {
        .list-box-option {
          &.selected {
            background-color: #e5e5e5;
          }
        }
      }
    }
    &:after {
      content: '';
      position: absolute;
      bottom: 0;
      background: linear-gradient(to bottom, transparent, $popup__background-color);
      height: 25%;
      width: 100%;
    }
    &::-webkit-scrollbar {
      height: 4em;
      width: 4px;
      border-radius: 11px;
    }
    &::-webkit-scrollbar-button {
      background: white;
    }
    &::-webkit-scrollbar-track {
      background: white;
      border-radius: 10px;
    }
    &::-webkit-scrollbar-track-piece {
      background: white;
    }
    &::-webkit-scrollbar-thumb {
      background: grey;
      border-radius: 10px;
      height: 4px;
    }
  }
  .add-account {
    .add-account-button {
      position: relative;
      color: #{$commblue_primary};
      border: none;
      background-color: $popup__background-color;
      cursor: pointer;
      margin: 25px 0px 10px 0px;
      padding: 0;
      border: 1px solid transparent;
      &:hover {
        color: #{$commblue_shade20};
        &:after {
          content: '';
          position: absolute;
          right: 0;
          bottom: 0;
          width: 98%;

          border-bottom: 1px solid;
          border-radius: 0;
        }
      }
      .account-switch-icon {
        vertical-align: middle;
        display: inline-block;
      }
    }
  }

  .main-profile {
    margin-bottom: 30px;
    text-align: center;
    mgt-person {
      --avatar-size: 72px;
      --avatar-direction: column;
      --details-spacing: 0px;
    }
  }
}

:host .popup-commands ul,
mgt-login .popup-commands ul {
  list-style-type: none;
  margin: var(--popup-command-margin);
  padding: 0;
  margin-right: 20px;
  margin-bottom: 10px;
  margin-top: 6px;
  text-align: right;
}

:host .popup-command,
mgt-login .popup-command {
  font-family: $font-family;
  font-size: var(--popup-command-font-size);
  color: #{$commblue_primary};
  background-color: $popup__background-color;
  border: none;
  padding: 0 0 1px 0;
  cursor: pointer;
  transition: color 0.3s;
  border: 1px solid transparent;

  &:hover {
    color: #{$commblue_shade20};
    border-bottom: 1px solid;
    border-radius: 0;
  }
}

[dir='rtl'] {
  --popup-padding: 24px 24px 16px 48px;
  mgt-person {
    .details {
      --details-spacing: 0px 12px 0px 0px;
      &.small {
        --details-spacing: 0px 6px 0px 0px;
      }
    }
  }
}

